# StubMerge

./: README.md  pyproject.toml
src/stubmerge/: __init__.py  test_visitor.py  visitor.py
test/: test_informative.py  test_merge.py
