[project]
name = "stubmerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
stubmerge = "stubmerge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
